--- a/style.css
+++ b/style.css
@@ -1,1 +1,107 @@
+body{
+    background-color: #FFFFFF;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    font-family: sans-serif;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+
+}
+.navbar {
+    display: flex;
+    color: #F9FAF8;
+    background-color: #48d1cc;
+    padding: 20px 0px 20px 100px;
+    align-items: center;
+}
+.header-logo img {
+    width: 150px;
+    height: 150px;
+    border:4px;
+    border-radius: 15px;
+    margin-right: auto;
+}
+.header-link{
+    display: flex;
+    margin-left: auto;
+    padding: 0px 50px 50px 0px;
+}
+.header-link a {
+    text-decoration: none;
+    color: black;
+    font-size: 22px;
+    padding: 10px;
+    font-family: 'Roboto',arial;
+}
+/* The Sam-parts */
+
+.sam {
+    display: flex;
+    color: #F9FAF8;
+    align-items: center;
+    background-color: rgba(243, 6, 6, 0.664);
+    justify-content: center;
+    padding: 90px;
+}
+.sam-cta {
+    flex-basis:400px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-right: 50px;
+}
+
+.sam-cta p {
+    font-family: 'Roboto', arial;
+    font-size: 20px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+    margin: 0;
+    font-family: 'Roboto',Arial;
+}
+.sam button {
+    display: block;
+    text-align: center;
+    width: 110px;
+    border: none;
+    background-color:#48d1cc;
+    padding: 10px;
+    border-radius: 8px;
+    color: #fff;
+    font-family: 'Roboto', Arial;
+    text-decoration: none;
+    font-weight: bold;
+}
+.sam-image img{
+    width: 500px;
+    height: 500px;
+    border: 4px solid #48d1cc;
+    border-radius: 15px;
+}
+/* Content Part */
+
+.content {
+    align-items: center;
+}
+.content-info{
+    display: flex;
+    /*border: 1px solid gold; */
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.content-info img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 4px solid #ff0000;
+    border-radius: 15px;
+    margin: 5px 20px 0px 20px;
+}
 
